--- a/elasexatas/elasexatas/pom.xml
+++ b/elasexatas/elasexatas/pom.xml
@@ -69,7 +69,12 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-		</dependency> 		
+		</dependency>
+	    <dependency>
+      		<groupId>org.projectlombok</groupId>
+      		<artifactId>lombok</artifactId>
+      		<optional>true</optional>
+    	</dependency>	 		
 	</dependencies>
 	<build>
 		<plugins>
